[main] java properties & settings options